// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectScreenNotificationHandler getTeamsMessage should match snapshot when there are more than one events 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**2 new screens** are added in _projectName_! 🏃‍♂",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "ImageSet",
      "spacing": "extraLarge",
      "imageSize": "large",
      "images": [
        {
          "type": "Image",
          "url": "http://placehold.it/200"
        },
        {
          "type": "Image",
          "url": "http://placehold.it/200"
        }
      ],
      "separator": false
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://project?pid=projectId&sids=screenId,screenId2"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/project/projectId?sid=screenId&sid=screenId2"
        }
      ]
    }
  ]
}
`;

exports[`projectScreenNotificationHandler getTeamsMessage should match snapshot when there is only one event 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**screenName** is added in _projectName_! 🏃‍♂️",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "ImageSet",
      "spacing": "extraLarge",
      "imageSize": "large",
      "images": [
        {
          "type": "Image",
          "url": "http://placehold.it/200"
        }
      ],
      "separator": false
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://screen?pid=projectId&sid=screenId"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/project/projectId/screen/screenId"
        }
      ]
    }
  ]
}
`;
